--- a/src/views/static/partials/head.ejs
+++ b/src/views/static/partials/head.ejs
@@ -6,5 +6,5 @@
     <title>Pocket Thera-buddy</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
 
-    <link rel="stylesheet" href="../../../assets/css/application.css" />
+    <link rel="stylesheet" href="/css/application.css" />
 </head>
