--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-primary justify-content-between">
+<nav class="navbar navbar-light justify-content-between">
     <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link active" href="/">Home</a>
