--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -1,3 +1,14 @@
 body {
     padding: 25px;
 }
+
+main {
+    padding-top: 30px;
+    margin-left: 15px;
+}
+
+jumbotron {
+    background: white;
+    margin-top: 25px;
+}
+
