--- a/src/views/moodtracker/add.ejs
+++ b/src/views/moodtracker/add.ejs
@@ -4,7 +4,8 @@
 
     <body>
         <% include ../static/partials/navbar.ejs %>
-
+        <% include ./partials/messages.ejs %>
+        
         <main class="content">
            <!-- breadcrumbs -->
            <nav aria-label="breadcrumb">
