--- a/src/views/moodtracker/main.ejs
+++ b/src/views/moodtracker/main.ejs
@@ -4,6 +4,7 @@
 
     <body>
         <% include ../static/partials/navbar.ejs %>
+        <% include ./partials/messages.ejs %>
 
         <main class="content">
            <!-- breadcrumbs -->
