--- a/src/views/moodtracker/history.ejs
+++ b/src/views/moodtracker/history.ejs
@@ -4,7 +4,7 @@
 
     <body>
         <% include ../static/partials/navbar.ejs %>
-        <% include ./partials/messages.ejs %>
+        <% include ../static/partials/messages.ejs %>
 
         <main class="content">
            <!-- breadcrumbs -->
