--- a/src/views/moodtracker/main.ejs
+++ b/src/views/moodtracker/main.ejs
@@ -21,8 +21,7 @@
                 <div class="container">
                     <h1 class="display-4">Mood Tracker</h1>
                     <p class="lead">
-                        <a href="/add" class="button btn-success">Add a Mood</a>
-                        <a href="/history" class="button btn-warning">View History</a>
+                        <a href="/moodtracker/add" class="btn btn-success">Add a Mood</a>
                     </p>
                 </div>
             </div>
