--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-light justify-content-between">
-    <ul class="nav nav-tabs">
+    <div class="nav navbar">
         <li class="nav-item">
             <a class="nav-link active" href="/">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/moodtracker">Mood Tracker</a>
+            <a class="nav-link" href="/moodtracker" >Mood Tracker</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/habits">Habit Tracker</a>
@@ -21,5 +21,5 @@
         <li class="nav-item">
             <a class="nav-link" href="/support">Get Support</a>
         </li>
-    </ul>
+    </div>
 </nav>
