basic methods done

--- a/src/views/moodtracker/history.ejs
+++ b/src/views/moodtracker/history.ejs
@@ -23,16 +23,8 @@
             </nav>
             <!-- end breadcrumbs -->
 
-            <% if(results){ %>
-                <% results.forEach((result) => { %>
+            <h2>Mood History</h2>
 
-                    
-
-
-
-               <% }) %>
-
-          <%  } %>
         </main>
 
         <% include ../static/partials/baseScripts.ejs %>
