--- a/src/views/moodtracker/main.ejs
+++ b/src/views/moodtracker/main.ejs
@@ -22,6 +22,7 @@
                     <h1 class="display-4">Mood Tracker</h1>
                     <p class="lead">
                         <a href="/moodtracker/add" class="btn btn-success">Add a Mood</a>
+                        <a href="/moodtracker/history" class="btn btn-warning">View Mood History</a>
                     </p>
                 </div>
             </div>
