--- a/src/views/moodtracker/history.ejs
+++ b/src/views/moodtracker/history.ejs
@@ -24,6 +24,7 @@
             <!-- end breadcrumbs -->
 
             <h2>Mood History</h2>
+            <% include ../../../client/public/index.html %>
 
         </main>
 
