--- a/src/views/moodtracker/history.ejs
+++ b/src/views/moodtracker/history.ejs
@@ -24,10 +24,13 @@
             <!-- end breadcrumbs -->
 
             <h2>Mood History</h2>
-            <% include ../../../client/public/index.html %>
+            
+            <div id="root">
+                                 
+            </div>
 
         </main>
-
+        <script type="text/javascript" src="./bundle.js"></script>
         <% include ../static/partials/baseScripts.ejs %>
     </body>
 </html>
