--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,38 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 25px;
+  padding: 15px;
+}
+
+a {
+  text-dectoration: none;
+}
+
+.navbar-nav {
+  flex-direction: row !important;
+  margin-bottom: 15px;
+}
+
+.nav.navbar.red {
+  margin-bottom: 25px;
+}
+
+#user-form {
+  justify-content: center;
+  align-items: center;
+  margin-top: 35px;
+  margin-left: 50px;
+}
+
+#mood-nav {
+  margin-top: 35px;
+  flex-direction: row;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* GRADIENT -- warm-flame-gradient OR tempting-azure-gradient */
+/* PRIMARY COLOR -- teal lighten-3 */
+/* SECONDARY COLOR -- red lighten-3 */
