--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,3 +40,6 @@ code {
 /* GRADIENT -- warm-flame-gradient OR tempting-azure-gradient */
 /* PRIMARY COLOR -- teal lighten-3 */
 /* SECONDARY COLOR -- red lighten-3 */ 
+/* P - #80cbc4 P-light-  #b2fef7  P-dark- #4f9a94 */
+/* S- #ef9a9a S-light- #ffcccb S-dark- #ba6b6c */
+/* red- #b71c1c */
